# grblang

./: .clangd  .gitignore  CMakeLists.txt  README.md  bytecode_emit.c  bytecode_emit.h  lexer.c  lexer.h  main.c  parser.c  parser.h  resolver.c  resolver.h  run.local.sh  run.sh  run_tests.sh  stack.c  stack.h  test.grb  type_checker.c  type_checker.h  util.h  vm.c  vm.h
.zed/: debug.json
tests/: build.sh  cleanup.sh  testadd.grb  testarray.grb  testarrayappend.grb  testarrayappend.grb.out  testarrayidxassign.grb  testarrayidxassign.grb.out  testarrayindex.grb  testboolvars.grb  testcompoundassignment.grb  testdiv.grb  testifstmts.grb  testintvars.grb  testmul.grb  teststring.grb  teststringconcat.grb  testsub.grb  testwhile.grb
